# kanji-2965-CNN-ETL9G

./: .gitignore  4BIT_QUANTIZATION_GUIDE.md  HIERCODE_HIGITA_COMPLETE.md  PROJECT_DIARY.md  README.md  RESEARCH.md  TRAINING_RESULTS.md  carbon_footprint_section.md  codecarbon_integration_guide.md  codecarbon_integration_guide.py  convert_to_onnx.py  convert_to_safetensors.py  create_training_visualizations.py  example_safetensors_usage.py  generate_enhanced_mapping.py  generate_rust_mapping.py  inspect_onnx_model.py  measure_co2_emissions.py  model-card.md  pooling_comparison.py  preflight_check.py  prepare_etl9g_dataset.py  pyproject.toml  requirements.txt  test_etl9g_setup.py  train_etl9g_model.py
.github/workflows/: lint.yml
docs/: RNN_DIFFERENCES.md
scripts/: __init__.py  checkpoint_manager.py  convert_int8_pytorch_to_quantized_onnx.py  convert_to_onnx.py  convert_to_safetensors.py  create_class_mapping.py  create_dataset_metadata.py  example_safetensors_usage.py  export_4bit_quantized_onnx.py  export_quantized_to_onnx.py  export_to_onnx_hiercode.py  generate_chunk_metadata.py  generate_enhanced_mapping.py  generate_mapping.py  hiercode_higita_config.py  hiercode_higita_enhancement.py  inspect_onnx_model.py  load_multi_etl.py  measure_co2_emissions.py  model_utils.py  onnx_operations_comparison.py  optimization_config.py  pooling_comparison.py  preflight_check.py  prepare_dataset.py  prepare_etl9g_dataset.py  quantize_model.py  quantize_to_4bit_bitsandbytes.py  test_etl9g_setup.py  train_cnn_model.py  train_etl9g_model.py  train_hiercode.py  train_hiercode_higita.py  train_qat.py  train_radical_rnn.py  train_rnn.py  train_vit.py
scripts/rnn/: README.md  __init__.py  data_processor.py  deploy_rnn_model.py  evaluate_rnn_models.py  rnn_model.py  train_rnn_model.py
tests/: __init__.py  test_checkpoint_manager.py  test_conversion_scripts.py  test_hiercode_higita_config.py  test_optimization_config.py  test_prepare_dataset.py  test_training_scripts.py  test_utility_modules.py
